package boa.types;

import "shared.proto";
import "code.proto";
import "issues.proto";

option optimize_for = SPEED;

message Project {
	required string id = 1;
	required string name = 2;
	required string project_url = 3;
	optional string homepage_url = 4;
	optional uint64 created_date = 5;
	optional string description = 6;
	repeated string operating_systems = 7;
	repeated string programming_languages = 8;
	repeated string databases = 9;
	repeated string licenses = 10;
	repeated string interfaces = 11;
	repeated string audiences = 12;
	repeated string topics = 13;
	repeated string status = 14;
	repeated string translations = 15;
	optional bool donations = 16;
	repeated Person maintainers = 17;
	repeated Person developers = 18;
	repeated CodeRepository code_repositories = 19;
	repeated IssueRepository issue_repositories = 20;
	enum ForgeKind {
		option allow_alias = true;
		OTHER = 0;
		SF = 1;
		SOURCEFORGE = 1;
		GITHUB = 2;
		APACHE = 3;
		QUALITAS = 4;
	}
	required ForgeKind kind = 21;
}
